k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: wallet }
spec:
  replicas: 2
  selector: { matchLabels: { app: wallet } }
  template:
    metadata: { labels: { app: wallet } }
    spec:
      securityContext: { runAsNonRoot: true, runAsUser: 65532 }
      containers:
        - name: wallet
          image: novapay:local
          ports: [{ containerPort: 8080 }]
          securityContext: { readOnlyRootFilesystem: true, allowPrivilegeEscalation: false }
